# CodeCompass

./: CMakeLists.txt  FindThrift.cmake
doc/: deps.md
plugins/cpp/service/: CMakeLists.txt
plugins/cpp_reparse/service/: CMakeLists.txt
plugins/dummy/parser/src/: dummyparser.cpp
plugins/dummy/service/: CMakeLists.txt
plugins/git/service/: CMakeLists.txt
plugins/metrics/service/: CMakeLists.txt
plugins/search/common/: CMakeLists.txt
plugins/search/indexer/: CMakeLists.txt
plugins/search/indexer/include/indexer/: indexerprocess.h
plugins/search/indexer/indexer-java/: CMakeLists.txt
plugins/search/indexer/src/: indexerprocess.cpp
plugins/search/service/: CMakeLists.txt
plugins/search/service/include/service/: serviceprocess.h
plugins/search/service/search-java/: CMakeLists.txt
plugins/search/service/src/: serviceprocess.cpp
scripts/docker/CC-Devel/: Dockerfile  buildcc.sh  configurecc.sh  fetchcc.sh  shellcc.sh
scripts/docker/CC-Devel/dbuild/: install_dependencies.sh  install_thrift.sh  uagen.awk  uagen.sh
scripts/docker/CC-Devel/peer/: buildcompass.sh  builder_config.sh  configurecompass.sh
scripts/docker/CC-Runtime/: create_base_images.sh
scripts/docker/CC-Runtime/codecompass/: Dockerfile
service/plugin/: CMakeLists.txt
service/project/: CMakeLists.txt
service/workspace/: CMakeLists.txt
util/include/util/: versionhandling.h
webgui/: index.html  package.json
webserver/: CMakeLists.txt
webserver/include/webserver/: thrifthandler.h
webserver/src/: webserver.cpp
